--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<body style="background-color:000;
-             text-color:fff">
+<body style="background-color:000;">
   
-<p>l2zfjlh</p>
+<p style="color:fff;">l2zfjlh</p>
   
 </body>
 </html>
