--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
-<body style="background-color:000;">
+<body style="background-color:#000;">
   
-<p style="color:fff; text-align:center;">l2zfjlh</p>
+<p style="color:#fff; text-align:center;">l2zfjlh</p>
   
 </body>
 </html>
